branches/0.1/src/objects/ProjectIssue__c.object
<CustomObject>
    <fields>
        <fullName>Deadline__c</fullName>
        <label>Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <label>Percent Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectTask__c</fullName>
        <label>Project Task</label>
        <referenceTo>ProjectTask__c</referenceTo>
        <relationshipName>Project_Task</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project2__c</referenceTo>
        <relationshipName>Project_Issue</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>StartDate</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <type>Lookup</type>
    </fields>
    <label>Project Issue</label>
    <nameField>
        <label>Topic</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>